--- a/LobotomyCorpWiki/1.md
+++ b/LobotomyCorpWiki/1.md
@@ -1,1 +1,17 @@
-
+---
+title: T-01-31 沉默乐团
+date: 2024/9/18
+tags: [LobotomyCorp]
+head:
+  - - meta
+    - name: T-01-31
+      content: ALEPH
+  - - meta
+    - name: keywords
+      content: S
+---
+来自废墟的最华丽的演出，即将拉开帷幕！
+---
+“沉默乐团”（T-01-31），在收容单元内的外貌类似于一个人形的塑料模特，但它没有人形模特的腿部，也没有手臂。它的下侧本该是腿部的地方被支柱和底盘所代替，穿着一套黑白相间的，类似燕尾服的服装。
+收容单元内的实体只是“沉默乐团”的乐队指挥，组成乐团的还有另外四个形似“歌唱家”的实体，但它们只有在“沉默乐团”突破收容后才会出现在乐队指挥的周围。
+该异想体的简介翻译有误，韩文原文为：“망가진 것들에게서부터 세상에서 가장 아름다운 연주가 시작된다.”其中“망가진 것들에게서부터”直译可以译为：“从被损坏的东西开始”，而并非游戏里常提到的概念性地点“废墟”。
