--- a/LobotomyCorpWiki /abnormalities/T0131.md
+++ b/LobotomyCorpWiki /abnormalities/T0131.md
@@ -18,14 +18,13 @@ head:
 ---
 
 ### 异常详情
-
-**外观描述**: 
 ![I-1516698884](https://github.com/user-attachments/assets/bc6fcc31-f595-44b7-80a4-c716bcbee58d)
-                  #沉默乐团
- #T-01-31                         ALEPH
+                  **沉默乐团
+ **T-01-31                         ALEPH
+ **外观描述**: 
 “沉默乐团”（T-01-31），在收容单元内的外貌类似于
-一个人形的塑料模特，但它没有人形模特的腿部，也没                                     #沉默乐团
-有手臂。它的下侧本该是腿部的地方被支柱和底盘所代                      #T-01-31                       ALEPH
+一个人形的塑料模特，但它没有人形模特的腿部，也没
+有手臂。它的下侧本该是腿部的地方被支柱和底盘所代
 替，穿着一套黑白相间的，类似燕尾服的服装。
 
 **能力与特性**: 异常的能力和特性，包括工作要求和互动后果。
